Hinzugefügt, dass man direkt den Codespace runnen kann und das möglichst automatisch. Dazu eine .env für mehr Sicherheit hinzugefügt.

--- a/devcontainer.json
+++ b/devcontainer.json
@@ -2,5 +2,5 @@
   "name": "PHP Codespace",
   "image": "mcr.microsoft.com/devcontainers/php:8.2",
   "forwardPorts": [8000],
-  "postStartCommand": "php -S 0.0.0.0:8000"
+  "postStartCommand": "bash start-dev.sh"
 }
